gulp sourcemaps and watch

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -1,3 +1,4 @@
+@import './components/fonts.scss';
 @import './components/main.scss';
 @import './components/header.scss';
 @import './components/footer.scss';
