Modifiying Scripts Task

--- a/src/assets/scss/bundle.scss
+++ b/src/assets/scss/bundle.scss
@@ -1,4 +1,8 @@
-@import './components/fonts.scss';
+/*
+    This files contatins all components for styling with sass
+    All new added scss file must import here.
+*/
+
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700;1,900&display=swap');
+@import './components/default.scss';
 @import './components/main.scss';
-@import './components/header.scss';
-@import './components/footer.scss';
