Task Replace Placeholder

--- a/style.css
+++ b/style.css
@@ -6,6 +6,6 @@ Description: It's a premium theme for my wordpress workstation site.
 Version: 1.0.0
 License: GPLv2
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: jm-site
+Text Domain: jmsite
 Tags: responsive, translation-ready
 */
